add examples of max array utilisation and SLAB